# LabPtPTm2

./: .gitignore  README.md  pyproject.toml  setup.py  test.ipynb
.dvc/: config
data/1125km_src1/: -1dBm_ch1_1.h5.dvc  -1dBm_ch1_2.h5.dvc  -1dBm_ch1_3.h5.dvc  -1dBm_ch2_1.h5.dvc  -1dBm_ch2_2.h5.dvc  -1dBm_ch2_3.h5.dvc  -1dBm_ch3_1.h5.dvc  -1dBm_ch3_2.h5.dvc  -1dBm_ch3_3.h5.dvc  -1dBm_ch4_1.h5.dvc  -1dBm_ch4_2.h5.dvc  -1dBm_ch4_3.h5.dvc  -1dBm_ch5_1.h5.dvc  -1dBm_ch5_2.h5.dvc  -1dBm_ch5_3.h5.dvc  -1dBm_ch6_1.h5.dvc  -1dBm_ch6_2.h5.dvc  -1dBm_ch6_3.h5.dvc  -1dBm_ch7_1.h5.dvc  -1dBm_ch7_2.h5.dvc  -1dBm_ch7_3.h5.dvc  -2dBm_ch1_1.h5.dvc  -2dBm_ch1_2.h5.dvc  -2dBm_ch1_3.h5.dvc  -2dBm_ch2_1.h5.dvc  -2dBm_ch2_2.h5.dvc  -2dBm_ch2_3.h5.dvc  -2dBm_ch3_1.h5.dvc  -2dBm_ch3_2.h5.dvc  -2dBm_ch3_3.h5.dvc  -2dBm_ch4_1.h5.dvc  -2dBm_ch4_2.h5.dvc  -2dBm_ch4_3.h5.dvc  -2dBm_ch5_1.h5.dvc  -2dBm_ch5_2.h5.dvc  -2dBm_ch5_3.h5.dvc  -2dBm_ch6_1.h5.dvc  -2dBm_ch6_2.h5.dvc  -2dBm_ch6_3.h5.dvc  -2dBm_ch7_1.h5.dvc  (+150 more)
data/1125km_src2/: -1dBm_ch1_1.h5.dvc  -1dBm_ch1_2.h5.dvc  -1dBm_ch1_3.h5.dvc  -1dBm_ch2_1.h5.dvc  -1dBm_ch2_2.h5.dvc  -1dBm_ch2_3.h5.dvc  -1dBm_ch3_1.h5.dvc  -1dBm_ch3_2.h5.dvc  -1dBm_ch3_3.h5.dvc  -1dBm_ch4_1.h5.dvc  -1dBm_ch4_2.h5.dvc  -1dBm_ch4_3.h5.dvc  -1dBm_ch5_1.h5.dvc  -1dBm_ch5_2.h5.dvc  -1dBm_ch5_3.h5.dvc  -1dBm_ch6_1.h5.dvc  -1dBm_ch6_2.h5.dvc  -1dBm_ch6_3.h5.dvc  -1dBm_ch7_1.h5.dvc  -1dBm_ch7_2.h5.dvc  -1dBm_ch7_3.h5.dvc  -2dBm_ch1_1.h5.dvc  -2dBm_ch1_2.h5.dvc  -2dBm_ch1_3.h5.dvc  (+166 more)
examples/: basics.ipynb  labptptm2.yaml
labptptm2/: __init__.py  dataloader.py  store.py
(+266 files in other folders)
